[gd_scene load_steps=8 format=2]

[ext_resource path="res://tiles/decorativeWindow.png" type="Texture" id=1]
[ext_resource path="res://fonts/decorative_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://menuTheme.tres" type="Theme" id=3]
[ext_resource path="res://SocialModal.gd" type="Script" id=4]
[ext_resource path="res://fonts/SWAP_12_Bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://tiles/PopupMenuTheme.tres" type="Theme" id=6]
[ext_resource path="res://fonts/SWAP_12_Regular.tres" type="DynamicFont" id=7]

[node name="SocialModal" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 4 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Backdrop"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Backdrop/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -166.0
margin_right = 166.0
margin_bottom = 166.0
texture = ExtResource( 1 )
patch_margin_left = 18
patch_margin_top = 22
patch_margin_right = 26
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Backdrop/ColorRect/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_right = 300.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "I18N_SOCIAL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 62.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "I18N_TWITTER"

[node name="HBoxContainer" type="HBoxContainer" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 26.0
rect_min_size = Vector2( 180, 16 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../OKButton")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/Panel")
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "@hai1touch"
align = 2

[node name="Label2" type="Label" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 116.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "I18N_DISCORD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 26.0
rect_min_size = Vector2( 180, 0 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../HBoxContainer/Panel")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../HBoxContainer3/Panel")
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "discord.gg/95JWgy9gue"
align = 2

[node name="Label3" type="Label" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 158.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "I18N_WEBSITE"

[node name="HBoxContainer3" type="HBoxContainer" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 168.0
margin_right = 300.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 300.0
margin_bottom = 26.0
rect_min_size = Vector2( 180, 0 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../HBoxContainer2/Panel")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../OKButton")
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "haitouch.ga/me"
align = 2

[node name="Footer" type="Control" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 202.0
margin_right = 300.0
margin_bottom = 228.0
size_flags_vertical = 3

[node name="OKButton" type="Button" parent="Backdrop/ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 236.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 64 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../HBoxContainer3/Panel")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../HBoxContainer/Panel")
text = "I18N_CLOSE"

[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/Panel" to="." method="_on_twitter_pressed"]
[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Panel" to="." method="_on_Discord_pressed"]
[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/HBoxContainer3/Panel" to="." method="_on_website_pressed"]
[connection signal="pressed" from="Backdrop/ColorRect/NinePatchRect/VBoxContainer/OKButton" to="." method="_on_ResumeButton_pressed"]
